MQTT client, add new operators for 'processors'