@@ -10,7 +10,6 @@
  */
 package org.eclipse.sensinact.gateway.sthbnd.mqtt.smarttopic.processor.formats;
 
-import org.eclipse.sensinact.gateway.sthbnd.mqtt.MqttActivator;
 import org.eclipse.sensinact.gateway.sthbnd.mqtt.smarttopic.processor.formats.exception.ProcessorFormatException;
 import org.eclipse.sensinact.gateway.sthbnd.mqtt.smarttopic.processor.formats.iface.ProcessorFormatIface;
 import org.eclipse.sensinact.gateway.sthbnd.mqtt.smarttopic.processor.selector.SelectorIface;
@@ -21,28 +20,20 @@ import org.slf4j.LoggerFactory;
  * Stateless class that is capable of interprete a given format.
  * @author <a href="mailto:Jander.BOTELHODONASCIMENTO@cea.fr">Jander Botelho do Nascimento</a>
  */
-public class ProcessorFormatPlus implements ProcessorFormatIface {
+public class ProcessorFormatToFloat implements ProcessorFormatIface {
 
-    private static final Logger LOG = LoggerFactory.getLogger(MqttActivator.class);
+    private static final Logger LOG = LoggerFactory.getLogger(ProcessorFormatToFloat.class);
 
     @Override
     public String getName() {
-        return "plus";
+        return "toFloat";
     }
 
     @Override
     public String process(String inData,SelectorIface selector) throws ProcessorFormatException {
         try {
-            final String expression=selector.getExpression();
-
-            try {
-                Float inDataValue=new Float(inData);
-                Float value=new Float(expression);
-                return Float.valueOf(inDataValue+value).toString();
-            }catch (NumberFormatException e){
-                return inData.concat(selector.getExpression());
-            }
-
+            Float value=new Float(inData);
+            return Float.valueOf(value).toString();
         } catch (Exception e) {
             LOG.error("Failed to apply {} filter. Bypassing filter",getName(),e);
             return inData;
